--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "args": ["ex.asm"],
+            "args": ["ex4.asm"],
             "console": "integratedTerminal"
         }
     ]
